fixed footer display on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,9 @@ nav a:hover {
 	nav ul {
 		padding-right: 20px;
 	}
+	.avatar {
+		width: 270px;
+	}
 }
 
 /* On screens 768px and less */
@@ -261,9 +264,13 @@ nav a:hover {
 @media screen and (max-width: 640px) {
 	.wrapper {
 		width: 640px;
+		margin: 0px;
 	}
 	header {
 		border-bottom: none;
+	}
+	footer {
+		width: 640px;
 	}
 	#logo {
 		text-align: center;
@@ -298,7 +305,7 @@ nav a:hover {
 	}
 	#content {
 		width: 560px;
-		margin-left: 40px;
+		margin: 0px 20px;
 		margin-bottom: 30px;
 	}
 	.projects {
